<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Conctact List</string>
    <string name="action_settings">Settings</string>
    
     <string name="add_contact">Add New Contact</string>
      <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
 <string name="phone_number">Phone Number</string>
 <string name="work_number">Work Number</string>
  <string name="email_address">Email Address</string>
   <string name="home_address">Address List</string>
 
    <string name="contacts_title">Contacts</string>
     <string name="add_button">ADD</string>
      <string name="save_data">Save</string>
       <string name="edit_contact_title">Edit Contact</string>
        <string name="edit_address_title">Edit Address</string>
       <string name="show_contact_title">Show Contact</string>
        <string name="edit_button">Edit</string>
         <string name="delete_button">Delete</string>
          <string name="address_button">Add Address</string>
          
          
          
         <string name="address_new_title">Add New Address</string> 
        <string name="address_name">Name</string>
         <string name="address_street">Street</string>
          <string name="address_number">Number</string>
           <string name="address_city">City</string>
            <string name="address_state">State</string>
             <string name="address_zipcode">ZIP Code</string>   
             
             <string name="search_hint">Search Contacts</string>    
             
             
   
</resources>